--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,65 @@
-fastapi~=0.86.0
-pydantic~=1.10.2
-uvicorn~=0.15.0
-numpy~=1.22.4
-pandas~=1.3.5
-scikit-learn~=1.3.0
+anyio==4.0.0
+asgiref==3.7.2
+attrs==23.1.0
+Brotli==1.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+ConfigArgParse==1.7
+contourpy==1.1.1
+coverage==5.5
+cycler==0.11.0
+exceptiongroup==1.1.3
+fastapi==0.86.0
+Flask==1.1.2
+Flask-BasicAuth==0.2.0
+Flask-Cors==4.0.0
+fonttools==4.42.1
+gevent==23.9.1
+geventhttpclient==2.0.10
+greenlet==2.0.2
+h11==0.14.0
+idna==3.4
+importlib-resources==6.1.0
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
+kiwisolver==1.4.5
+locust==1.6.0
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+mockito==1.2.2
+msgpack==1.0.6
+numpy==1.22.4
+packaging==23.1
+pandas==1.3.5
+Pillow==10.0.1
+pkg_resources==0.0.0
+pluggy==1.3.0
+psutil==5.9.5
+py==1.11.0
+pydantic==1.10.12
+pyparsing==3.1.1
+pytest==6.2.5
+pytest-cov==2.12.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pyzmq==25.1.1
+requests==2.31.0
+scikit-learn==1.3.1
+scipy==1.10.1
+seaborn==0.12.2
+six==1.16.0
+sniffio==1.3.0
+starlette==0.20.4
+threadpoolctl==3.2.0
+toml==0.10.2
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.5
+uvicorn==0.15.0
+Werkzeug==2.3.7
+zipp==3.17.0
+zope.event==5.0
+zope.interface==6.0
